Fix controller positioning in VrShell when gyro reads are small

BUG=716201

Review-Url: https://codereview.chromium.org/2853843002
Cr-Commit-Position: refs/heads/master@{#468375}

Former-commit-id: f00f17c2badfd4132e5cac30413804ce34f72cbe